--- a/1_Forecasting_Air_Pollution_with_Amazon_SageMaker_and_DeepAR/pipeline/docker/Dockerfile
+++ b/1_Forecasting_Air_Pollution_with_Amazon_SageMaker_and_DeepAR/pipeline/docker/Dockerfile
@@ -1,6 +1,8 @@
 
 FROM python:3.7-slim-buster
     
+COPY ./sql /opt/ml/processing/
+    
 RUN pip install PyAthena[Pandas] geopandas scikit-learn
 ENV PYTHONUNBUFFERED=TRUE
 
